--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -36,9 +36,9 @@ The men, their spears now being employed as brush clearing blades, at which they
 
 Bringing a spearhead down flat and sharply on top of some of the bigger spiders would make an audible "pop" with spray spider guts. The two men would sometimes try to get the other with a good spray of spider guts with an expertly angled swat of the spearhead[fn:: In the modern game of golf, this is known as a 'chip'.]. It was a kind of game they had.
 
-It occurred to them both that if they were the size of a baby, they too would do as forest-children do. They could both see that the baby, now dragging his long spear behind, his hand around its tip, his thumb seemingly checking the point for sharpness mindlessly at intervals, had no trouble at all. <-xxx
+It occurred to them both that if they were the size of a baby, they too would do as forest-children do. They could both see that the baby was having no trouble at all. He was currently dragging his long spear behind him, his hand around its tip, his thumb seemingly checking the point for sharpness at mindless intervals.
 
-Though he had a mostly normal speaking voice, if a bit high-pitched, his singing brought out more usual-sounding baby noises. He was singing softly in his language, presumably, punctuating and making rhythmic noises made of coos, mummers, and occasionally a delighted squeal. This did nothing to take away from the uncanniness that this sophistocated baby had.
+Though he had a mostly normal speaking voice, if a bit high-pitched, his singing brought out more usual-sounding baby noises. He was singing softly in his language, presumably, punctuated with rhythmic coos, mummers, and occasionally a delighted squeal. This did nothing to take away from the uncanniness that this sophistocated baby had.
 
 It was getting dark, but was not yet killing-palm. The forest-child seemed unbothered, and was now making occasional tight turns, as though the party had switched to surface streets and was almost home. There seemed to be a /destination/ coming up.
 
