--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -36,7 +36,7 @@ The men, their spears now being employed as brush clearing blades, at which they
 
 Bringing a spearhead down flat and sharply on top of some of the bigger spiders would make an audible "pop" with spray spider guts. The two men would sometimes try to get the other with a good spray of spider guts with an expertly angled swat of the spearhead[fn:: In the modern game of golf, this is known as a 'chip'.]. It was a kind of game they had.
 
-It occurred to them both that if they were the size of a baby, they too would do as forest-children do. They could both see that the baby was having no trouble at all. He was currently dragging his long spear behind him, his hand around its tip, his thumb checking the point for sharpness at intervals.
+It occurred to them both that if they were the size of a baby, they too would do as forest-children do. They could both see that the baby was having no trouble at all. He was currently dragging his long spear behind him, his hand around its tip, his thumb checking the point for sharpness at intervals[fn:: This is a nervous habit that is frowned upon by the Crec. They call it 'worrying your point' and it's used metaphorically to mean 'getting worked up over nothing'.].
 
 Though he had a mostly normal speaking voice, if a bit high-pitched, his singing brought out more usual-sounding baby noises. He was singing softly in his language, presumably, punctuated with rhythmic coos, mummers, and occasionally a delighted squeal. This did nothing to take away from the uncanniness that this sophistocated baby had.
 
