--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -32,13 +32,13 @@ For the men, this meant a walk through thick, chest-high bush that was all painf
 
 A Crec ecology text book could easily have used a picture of this bit of woods to illustrate these concepts.
 
-The men, their spears now being employed as brush clearing blades, at which they were barely more useful than any other stick, were swatting away face-sized, muscular, quick spiders, all-but-invisible small, but poisonous green vipers, and the occasional poisonous frog or centipede (and the pretenders of each, who they could immedately identify as harmless, even at this pace, and would try not to wontonly kill.)
+The men, their spears now being employed as brush clearing blades, at which they were barely more useful than any other stick, were swatting away face-sized, muscular, quick spiders, all-but-invisible small, but poisonous green vipers, and the occasional poisonous frog or centipede (and the pretenders of each, who they could immediately identify as harmless, even at this pace, and would try not to wantonly kill.)
 
 Bringing a spearhead down flat and sharply on top of some of the bigger spiders would make an audible "pop" with spray spider guts. The two men would sometimes try to get the other with a good spray of spider guts with an expertly angled swat of the spearhead[fn:: In the modern game of golf, this is known as a 'chip'.]. It was a kind of game they had.
 
-It occurred to them both that if they were the size of a baby, they too would do as forest-children do. They could both see that the baby was having no trouble at all. He was currently dragging his long spear behind him, his hand around its tip, his thumb checking the point for sharpness at intervals[fn:: This is a nervous habit that is frowned upon by the Crec. They call it 'worrying your point' and it's used metaphorically to mean 'getting worked up over nothing'.].
+It occurred to them both that if they were the size of a baby, they too would do as forest-children do. They could both see that the baby was having no trouble at all. He was currently dragging his long spear behind him, his hand around its tip, his thumb checking the point for sharpness at intervals[fn:: This is a nervous habit that is frowned upon by the Crec. They call it 'worrying your point' and it's used metaphorically to mean 'getting worked up over nothing'. This /will/ dull a fire-hardened spear point on the scale of days.].
 
-Though he had a mostly normal speaking voice, if a bit high-pitched, his singing brought out more usual-sounding baby noises. He was singing softly in his language, presumably, punctuated with rhythmic coos, mummers, and occasionally a delighted squeal. This did nothing to take away from the uncanniness that this sophistocated baby had.
+Though he had a mostly normal speaking voice, if a bit high-pitched, his singing brought out more usual-sounding baby noises. He was singing softly in his language, presumably, punctuated with rhythmic coos, mummers, and occasionally a delighted squeal. This did nothing to take away from the uncanniness of this swaggering baby.
 
 It was getting dark, but was not yet killing-palm. The forest-child seemed unbothered, and was now making occasional tight turns, as though the party had switched to surface streets and was almost home. There seemed to be a /destination/ coming up.
 
