--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -52,7 +52,7 @@ The Crec did not have a word for this shape. It was a nearly perfect cube.
 
 xxx should be way off the path if they didn't even know about it xxx
 
-As the front of the hide came into view, they could see that some rather sophisticated modern construction had been done too: There was a sort of wood entrance-way constructed around the opening. The stone was clearly many rotting-ages[fn:: A 'rotting-age' is reckoned to be the time required for a fallen tree to rot completely back into soil. The Crec knew this was an imprecise unit of time. Part of the point was: It's such a long time, that one needn't nit-pick about whether the tree was "fully rotted" by this point or the other.] old. The wood was comparatively new.
+As the front of the hide came into view, they could see that some rather sophisticated modern construction had been done too: There was a sort of wood entrance-way constructed around the opening. The stone was clearly many rotting-ages[fn:: A 'rotting-age' is reckoned to be the time required for a fallen tree to rot completely back into soil. The Crec knew this was an imprecise unit of time. Part of the point was: It's such a long time, that one needn't nit-pick about whether the tree was "fully rotted" by this point or the other. We might say 'eons'.] old. The wood was comparatively new.
 
 It was not a particularly inviting entrance. This structure was solely for the purpose of protecting the occupants.
 
