--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -64,7 +64,9 @@ Looking inward, one's eyes were met with a bunch <-xxx of fire-hardened spikes, 
 
 This was referred to in standard Crecspeak as a spike-guard. It was known to Grav and Gog as a "porcupine-pussy"[fn:: They thought this much more descriptive and poetic.].
 
-The Crec had latches and vine catches that would make ingress much easier than it was in this case, where they were both struggling, helping one another with a stab here or a smack there (from a poorly timed release of a branch bent out of the way). The baby gave them exasperated but patient looks as he stopped every pinkie-thumb or so to press back some of the troublesome spikes at their base and wait for the two enormous people to ease past all their many pain points.
+The Crec had latches and vine catches that would make ingress much easier than it was in this case, where they were both struggling, helping one another with a stab here or a smack there (from a poorly timed release of a branch bent out of the way).
+
+The baby gave them exasperated but patient looks as he stopped repeatedly to press back some of the more troublesome spears at their base and wait for the two enormous people to ease past all their many pain points.
 
 This was a hide that the forest-child somehow knew about in advance. The plains were not an option this evening, as the forest-child's message was ultimately pretty clear: There was a lizard-bird, hunting at night, which was the usual, and along the nearby plains[fn:: Which was also usual for a lizard-bird, though they were so rare as daily experiences go they hadn't really anticipated this particular problem, really. Caveman Thag would have been disappointed.].
 
