--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -64,13 +64,13 @@ Looking inward, one's eyes were met with a bunch <-xxx of fire-hardened spikes, 
 
 This was referred to in standard Crecspeak as a spike-guard. It was known to Grav and Gog as a "porcupine-pussy"[fn:: They thought this much more descriptive and poetic.].
 
-The Crec had latches and vine catches that would make ingress much easier than it was in this case, where they were both struggling, helping one another with a stab here or a smack there (from a poorly timed release of a branch bent out of the way).
+A typically Crec spike-guard had all sorts of clever latches and vine catches that would make getting /in/ much easier than it was in this case, where they were both struggling, helping one another with a stab here or a smack there, from a poorly timed release of a branch bent out of the way.
 
-The baby gave them exasperated but patient looks as he stopped repeatedly to press back some of the more troublesome spears at their base and wait for the two enormous people to ease past all their many pain points.
+The baby gave them exasperated but patient looks as he stopped repeatedly to press back some of the more troublesome spears at their base and wait for the two enormous people to ease past all their "pain points".
 
 This was a hide that the forest-child somehow knew about in advance. The plains were not an option this evening, as the forest-child's message was ultimately pretty clear: There was a lizard-bird, hunting at night, which was the usual, and along the nearby plains[fn:: Which was also usual for a lizard-bird, though they were so rare as daily experiences go they hadn't really anticipated this particular problem, really. Caveman Thag would have been disappointed.].
 
-And the hide was a perfect solution. They would likely just enjoy a night of periodic but contained terror as they get sniffed out and then mercilessly charged by an animal that gets bloodier and angrier with every failure. All three having spears, they both might possibly enjoy the pleasure of mortally wounding a tooth-cat or two with a satisfying stab down its throat[fn:: Tooth-cats were /hated/ among the Crec. Tooth-cats were for them what wolves are for settler sheep farmers. There was a mindless hatred. They would see no downside to all-out extension. Every Crec was at most two or three relations away from someone who had been killed and eaten by a tooth-cat.].
+And the hide was a perfect solution. They would likely just enjoy a night of periodic but contained terror as they get sniffed out and then mercilessly charged by an animal that gets bloodier and angrier with every failure. All three having spears, they might even possibly enjoy the pleasure of mortally wounding a tooth-cat with a satisfying stab down its throat[fn:: Tooth-cats were /hated/ among the Crec. Tooth-cats were for them what wolves are for modern sheep farming settlers. There was a mindless hatred. They would see no downside to all-out extension. Every Crec was at most two or three relations away from someone who had been killed and eaten by a tooth-cat.].
 
 For them it would be a kind of entertainment.
 
