--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -84,13 +84,13 @@ After all-finger or so clicks, there was a blue flash and then a growing flame o
 
 Gog was holding an unfired clay oil lamp with a small, bright, efficient flame at the tip of its sturdy, short nozzle.
 
-This is a kind of travel lamp carried in nearly all kits. Though porous, the outside was waterproofed to the degree possible with pine pitch fixed with a packed layer of soot. This gave the outer surface an asphalt kind of finish that was good for the trail. It was thick enough to provide some impact protection, which is a big concern for the fragile things you drag around the jungle with you always. And to whatever extent the pitch soaked into the lamp, it was only so much more fuel. Old lamps gave of a distinctly comforting smell.
+This is a kind of travel lamp carried in nearly all kits. Though porous, the outside was waterproofed to the degree possible with pine pitch fixed with a packed layer of soot. This gave the outer surface an asphalt kind of finish that was good for the trail. It was thick enough to provide some impact protection, which is a big concern for the fragile things you drag around the jungle with you always. And to whatever extent the pitch soaked into the lamp, it was only so much more fuel. Old lamps gave of a distinct comforting smell; grandma, warm fires, salad days.
 
-Inside of course any one of literally thousands of known flamable oils could be used. One's preferred oil usually came down to which unpleasant characteristcs could be endured for the price. Oil was pretty expensive. Wherever you got it, the person you got it from got it in the same way you would have. Your time was worth what his was. So you generally considered the cost of most things, including flame-oils to be about what you'd pay yourself to go out and get some. A lot, in other words. But that value could be got in completely different ways. Maybe you're a modern stock broker. Maybe you mine gems with your bare hands.
+Inside of course any one of literally thousands of known flammable oils could be used. One's preferred oil usually came down to which unpleasant characteristics could be endured for the price. Oil was pretty expensive. Wherever you got it, the person you got it from got it in the same way you yourself could have. Your time was worth what his was. So you generally considered the cost of most things, including flame-oils to be about what you'd pay yourself to go out and get some. A lot, in other words. But that value could be got in completely different ways. Maybe you're a modern stock broker. Maybe you mine gems with your bare hands.
 
-Of course they had the nicest oil. It also happened to be rather a cheap one as most considered its smell to be a down side. They thought just the opposite: Turpentine[fn:: More or less.] burned predictably, gave little smoke, had a bright flame, and smelled like productively working with lumber. It was a nice, crafty kind of smell to very few, including them.
+Of course they had the nicest oil. It also happened to be rather a cheap one as luck would have it. Most considered its smell to be a down side. They thought just the opposite: Turpentine[fn:: More or less.] burned predictably, gave little smoke, had a bright, well-colored flame, and smelled to them like an exhausting day productively working with lumber. It was a nice, crafty kind of smell.
 
-The worst part of the night, they were sure, was going to be sharing a small burrow with a reeking baby who also happened to be a /very/ poor conversationalist.
+The worst part of the night, they were sure, was going to be sharing a small burrow with a reeking baby who also happened to be a very poor conversationalist.
 
 In the cheerful glow[fn:: For that is what it was.] of the lamp, the two men scanned the walls for anything bit-y. There was an especially hideous land-crab[fn:: Crec knew plenty about crabs. They were 'exotic' this far away from any source, but they knew well the body plan, the innards, and the delightful /taste/ of crab. The shells were always kept around for some user or other. All you needed was a rich uncle willing to let you sift through his garbage. Being familiar, somewhere far back in the Crecspeak family tree, someone noticed that this spider, the variety they shared the hide with, looked very much like a crab, had a lot of the same kinds of spines, made a similar clicking when crawling along rock, and provided an almost identical eating experience to their "delicacy" cousins. They were more plentiful, but tasted distinctly worse than actual crab, so it was more "just a name" except to the very hungry. And they were harmless. Huge, but harmless. And also slow and shy until startled.]. A few millipedes that one would not want to touch[fn:: Nothing capable of spraying.].
 
