--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -88,7 +88,7 @@ This is a kind of travel lamp carried in nearly all kits. Though porous, the out
 
 For fuel you could of course use any one of literally thousands of known flammable oils. One's preferred oil usually came down to which unpleasant characteristics could be endured for the price. Oil was pretty expensive. Wherever you got it, the person you got it from got it in the same way you yourself could have. Your time was worth what his was. So you generally considered the cost of most things, including flame-oils to be about what you'd pay yourself to go out and get some. A lot, in other words. But that value could be obtained in completely different ways: Maybe you're a modern stock broker. Maybe you mine gems with your bare hands.
 
-Of course they had the nicest oil. It also happened to be rather a cheap one as luck would have it. Most considered its smell to be a down side. They thought just the opposite: Turpentine[fn:: More or less.] burned predictably, gave little smoke, had a bright, well-colored flame, and smelled to them like an exhausting day productively working with lumber. It was a nice, crafty kind of smell.
+Of course they had the nicest oil. It also happened to be rather a cheap one as luck would have it. Most considered its smell to be a down side. They thought just the opposite. The lightly refined turpentine[fn:: More or less.] they preferred burned predictably, gave little smoke, had a bright, well-colored flame, and smelled to them like an exhausting day productively working with lumber. It was a nice, crafty kind of smell.
 
 The worst part of the night, they were sure, was going to be sharing a small burrow with a reeking baby who also happened to be a very poor conversationalist.
 
