--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -102,7 +102,7 @@ For one, they would have to awake and get running dangerously early in order too
 
 The last palm of woods would not be entirely quiet at that time. Missing conch was punishable[fn:: xxx] and they were balancing the penalty for that with the reckoned odds of getting eaten by one thing or another along the way.
 
-It was not unusual for a lizard-bird to continue its hunt until early morning, even after dawn. The men did have clear skies and enough moon going for them.
+It was not unusual for a lizard-bird to continue its hunt until early morning, even after dawn. The men did have clear skies and a sliver of morning-moon in their favor.
 
 /Play it by ear; we're safe for now/ was the unspoken conclusion. There was nothing tangabile the could do about the future at this point.
 
