--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -116,7 +116,7 @@ Oh-Mas too was working with fire.
 
 He had packed a large pipe and was lighting a twig to get things going.
 
-There was a lot to know about smoking plant matter in the ancient jungle and woods.
+There was a lot to know about the smoking of plant matter in the ancient jungle and woods.
 
 Grav and Gog were instantly curious. There were so many plants in Nature, and so little time to experiment, that relying on those from strange parts to introduce you to a new find was often fruitful.
 
