--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -118,7 +118,7 @@ He had packed a large pipe and was lighting a twig to get things going.
 
 There was a lot to know about the smoking of plant matter in the ancient jungle and woods.
 
-Grav and Gog were instantly curious. There were so many plants in Nature, and so little time to experiment, that relying on those from strange parts to introduce you to a new find was often fruitful.
+Grav and Gog were instantly curious. There were so many plants in Nature, and so little time to experiment that relying on those from strange parts to introduce you to a new find was often fruitful.
 
 He had no whole leaves that they could inspect. Grav and Gog took small pinches as specimens and stored them safely in case it turned out there was important medicinal knowledge at stake.
 
