--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -124,7 +124,7 @@ He had no whole leaves that they could inspect. Grav and Gog took small pinches 
 
 "Gog, I think we need to go easy. There's no judging its power from appearnces."
 
-"Sure. We need our wits about us. Let us just calibrate ourselves by supposing it has the force of toad-weed."
+"Sure. We need our wits about us. Let us just calibrate ourselves by supposing it has the force of toad-root."
 
 Grav laughed remembering how sick-monkey and randy-monkey they had become with the Balrag girls.
 
