--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -134,7 +134,7 @@ Grav laughed remembering how sick-monkey and randy-monkey they had become with t
 
 Oh-Mas had his pipe going by now and had filled the top half of the burrow with laminar green smoke. The appearance of the smoke alone would have been a warning to more experienced reflect-soul-trekkers.
 
-Without ceremony, Gog grabbed the pipe from the baby. For a very brief instant he made a very baby-like "whaa" which he clipped sharply, switching to a friendly, generous demeanor.
+Without ceremony, Gog grabbed the pipe from the baby. For an instant Oh-Mas made a very baby-like "whaa!" which he clipped sharply. His face returned to its friendly resting state and he made a pantomimed two handed "release" of the pipe with a smile, though it had already been taken from him.
 
 Gog never mistook Oh-Mas for an actual baby again. There was a restrained civility in the forest-child sometimes that made the men wonder if he was always in control of himself.
 
