--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -136,7 +136,7 @@ Oh-Mas had his pipe going by now and had filled the top half of the burrow with 
 
 Without ceremony, Gog grabbed the pipe from the baby. For an instant Oh-Mas made a very baby-like "whaa!" which he clipped sharply. His face returned to its friendly resting state and he made a pantomimed two handed "release" of the pipe with a smile, though it had already been taken from him.
 
-Gog never mistook Oh-Mas for an actual baby again. There was a restrained civility in the forest-child sometimes that made the men wonder if he was always in control of himself.
+Neither man ever mistook Oh-Mas for an actual baby again. This was clearly only his 'appearance'. Sometimes there was a restrained civility in the forest-child that made the men wonder if he was always in control of himself.
 
 After watching this and mindlessly accepting the pipe from Gog, Grav's next memory was he and Gog were laying face-up with the tops of their heads inches appart and each man's feet almost touching the enclosure's inner walls.
 
