--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -138,7 +138,7 @@ Without ceremony, Gog grabbed the pipe from the baby. For an instant Oh-Mas made
 
 Neither man ever mistook Oh-Mas for an actual baby again. This was clearly only his 'appearance'. Sometimes there was a restrained civility in the forest-child that made the men wonder if he was always in control of himself.
 
-After watching this and mindlessly accepting the pipe from Gog, Grav's next memory was he and Gog were laying face-up with the tops of their heads inches appart and each man's feet almost touching the enclosure's inner walls.
+After watching this and then mindlessly accepting the pipe from Gog, Grav's next memory was he and Gog were laying face-up with the tops of their heads inches appart and each man's feet almost touching the enclosure's inner walls.
 
 They were staring up. They had been in a long, convoluted conversation following some of the most inspired trains of thought probably for palm when he "came to". He had been both exploring his inner mind and having a deep conversation with Gog at the same time, Gog's voice being more or less detatched and coming from nowhere. He wasn't aware nor did he really care where Gog 'was'.
 
