--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -138,11 +138,11 @@ Without ceremony, Gog grabbed the pipe from the baby. For an instant Oh-Mas made
 
 Neither man ever mistook Oh-Mas for an actual baby again. This was clearly only his 'appearance'. Sometimes there was a restrained civility in the forest-child that made the men wonder if he was always in control of himself.
 
-After watching this and then mindlessly accepting the pipe from Gog, Grav's next memory was of him staring at the ceiling.
+After watching this and then mindlessly accepting the pipe from Gog, Grav's next recollection was of staring at the ceiling.
 
 He and Gog were laying on the floor face-up, with the tops of their heads a palm apart and each man's feet extending towards the hide's walls.
 
-They were both staring at the ceiling. They had been in a long, convoluted conversation following some of the most inspired trains of thought probably for palm when he "came to". He had been both exploring his inner mind and having a deep conversation with Gog at the same time, Gog's voice being more or less detatched and coming from nowhere. He wasn't aware nor did he really care where Gog 'was'.
+They were both staring at the ceiling. They had been in a long, convoluted conversation following some of the most inspired trains of thought he could recall when he "came to". He had been both exploring his inner mind and having a deep conversation with Gog at the same time, Gog's voice being more or less detatched and coming from nowhere. He wasn't aware nor did he really care where Gog 'was'.
 
 The thing that brought his sick-monkey around was Oh-Mas snarling out at the opening, and more or less normal, but loud breathing from an all-finger all-finger all-finger gourd predator of some kind. Most likely a tooth-cat.
 
