--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -144,7 +144,7 @@ He and Gog were laying on the floor face-up, with the tops of their heads a palm
 
 They were both staring at the ceiling. They had been in a long, convoluted conversation following some of the most inspired trains of thought he could recall when he "came to". He had been both exploring his inner mind and having a deep conversation with Gog at the same time, Gog's voice being more or less detatched and coming from nowhere. He wasn't aware nor did he really care where Gog 'was'.
 
-The thing that brought his sick-monkey around was Oh-Mas snarling out at the opening, and more or less normal, but loud breathing from an all-finger all-finger all-finger gourd predator of some kind. Most likely a tooth-cat.
+The thing that brought his sick-monkey around was Oh-Mas snarling out at the opening, spear at the ready, and a more or less normal, though very slow and very loud breathing from an all-finger all-finger all-finger gourd predator of some kind. Most likely a tooth-cat.
 
 They could see the very tip of one claw slipping in and out of the vine-work nearest the stone. The mass of vine was probably three parts of four of one pinkie-thumb in thicknest at the least. The claw, whoever's claw, was at least that long.
 
