--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -150,11 +150,11 @@ They could see the very tip of one claw slipping in and out of the vine-work nea
 
 And it belonged to an animal smart enough to start work immediately on tearing the vine trapway away from the hide altogether, which for an averaged sized male cat would mean sure death, as it could probably fit a good way into the opening and its reach was enough to at least mince you up sufficiently for dying.
 
-The gaps between the vine provied enough space for the Oh-Mas to jab it a few times pretty good, to which it audibly reacted, which is a good sign.
+The gaps between the vine provided enough space for the Oh-Mas to jab it a few times pretty good, to which it audibly reacted, which is a good sign.
 
-Grav and Gog continued to state at the ceiling.
+Grav and Gog went back to staring at the ceiling.
 
-The battle cries of the baby got intense enough to interest them and rolling their heads over to watch the show.
+The competing battle cries got intense enough to interest them finally and they rolled their heads over to watch the show.
 
 There would be no more talking for a while. The animal, initially just hungry was now mad with rage and sought revenge. Having glimpsed the animal that was doing all the damage the cat was also a bit disgusted with himself. /This little animal, and any friends it might have in there must die this night. No one must know of this/ the cat may have thought.
 
