--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -156,7 +156,9 @@ Grav and Gog went back to staring at the ceiling.
 
 The competing battle cries got intense enough to interest them finally and they rolled their heads over to watch the show.
 
-There would be no more talking for a while. The animal, initially just hungry was now mad with rage and sought revenge. Having glimpsed the animal that was doing all the damage the cat was also a bit disgusted with himself. /This little animal, and any friends it might have in there must die this night. No one must know of this/ the cat may have thought.
+There would be no more talking for a while.
+
+The animal, initially just hungry was now mad with rage and sought revenge. Having glimpsed the animal inside that was doing all this damage, the cat was also a bit disgusted with himself. /This little animal, and any friends it might have in there must die this night. No one must know of this/ the cat may have thought.
 
 Grav and Gog could now clearly see the mad beast at the end of the tunnel, the cat taking some time to just express his anger just in front and those spikes now appearing hoplessly flimsy from this side.
 
