--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -160,7 +160,7 @@ There would be no more talking for a while.
 
 The animal, initially just hungry was now mad with rage and sought revenge. Having glimpsed the animal inside that was doing all this damage, the cat was also a bit disgusted with himself. /This little animal, and any friends it might have in there must die this night. No one must know of this./ the cat may have thought.
 
-Grav and Gog could now clearly see the mad beast at the end of the tunnel, the animal now taking some time to express his rage just in front of the opening, and those spikes that now appearing hopelessly flimsy from their angle.
+Grav and Gog could now clearly see the mad beast at the end of the tunnel, the animal now taking some time to express his rage just in front of the opening, and those spikes now appearing hopelessly flimsy from their angle.
 
 Whatever the danger, the two men were captivated.
 
