--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -164,7 +164,7 @@ Grav and Gog could now clearly see the mad beast at the end of the tunnel, the a
 
 Whatever the danger, the two men were captivated.
 
-The cats fangs looked like polished tin, and seemed to be devoid of defect. The gums anchoring the fangs were not pink but blood red, almost purple. Gog felt he could /see/ how tightly those fangs were held by those gums, which seemed to be made of flexing muscle, actively holding, wielding those fangs. The symetrical tongue, tucked fark back in the throat had spikes that went from simi-transparent crystal where they were rooted in the toung to shiny black at the sharp tips, like terantula fangs.
+The cats fangs looked like polished tin, and seemed to be devoid of defect. The gums anchoring the fangs were not pink but blood red, almost purple. Gog felt he could /see/ how tightly those fangs were held by those gums, which seemed to be made of flexing muscle, actively holding, wielding those fangs. The symmetrical tongue, tucked far back in the throat had spikes on its surface that went from semitransparent crystal where they were rooted in the tongue to shiny black at the sharp tips, like tarantula fangs.
 
 As if in place of spume, the tiger dripped think, undiluted blood from its mouth, it had no apparent wound in its mouth, but its throat could have easily been pierced so furious and sure were Oh-Mas' jabs.
 
