--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -164,21 +164,23 @@ Grav and Gog could now clearly see the mad beast at the end of the tunnel, the a
 
 Whatever the danger, the two men were captivated.
 
-The cats fangs looked like polished tin, and seemed to be devoid of defect. The gums anchoring the fangs were not pink but blood red, almost purple. Gog felt he could /see/ how tightly those fangs were held by those gums, which seemed to be made of flexing muscle, actively holding, wielding those fangs. The symmetrical tongue, tucked far back in the throat had spikes on its surface that went from semitransparent crystal where they were rooted in the tongue to shiny black at the sharp tips, like tarantula fangs.
+The cats fangs looked like polished tin, and seemed to be devoid of defect. The gums anchoring the fangs were not pink but blood red, almost purple. Gog felt he could /see/ how tightly those fangs were held by those gums, which seemed to be made of flexing muscle, actively holding, wielding those fangs. The symmetrical tongue, tucked far back in the throat had spikes on its surface that went from semitransparent crystal where they were rooted in the tongue to shiny black at the sharp tips, like tarantula fangs. Its "wiskers" were about a xx diameter at the root.
 
-As if in place of spume, the tiger dripped think, undiluted blood from its mouth, it had no apparent wound in its mouth, but its throat could have easily been pierced so furious and sure were Oh-Mas' jabs.
+As if in place of saliva, the tiger dripped think, undiluted blood from its mouth, it had no apparent wound in its mouth, but its throat could have easily been pierced so furious and sure were Oh-Mas' jabs.
 
-It was drooling blood and pulsing bright pink foam out of the sides of its mouth in pluses, a bit more pushed out with each breath.
+To Grav and Gog, the cat simply drooled blood.
+
+In adition to the tick laminer blood, there was bright pink foam coming from the sides of its mouth in pluses, a bit more pushed out with each breath. It fell to the floor in small pink piles.
 
 More purple-pink gum would be exposed with every high screech-like roar.
 
 It was pissed.
 
-Crazed, the baby grabbed the only lit lamp and smartly slung it hard right onto the cat's brow, where it shattered, covering the cat with lighted pine pitch from the nearly-full lamp.
+Crazed, the baby grabbed the only lit lamp and smartly slung it hard, connecting with the cat's brow, where it shattered, covering the cat with lighted pine pitch from the nearly-full lamp.
 
-This roused the men, both of whom scrambled together in Grav's kit to get his lamp. Gog found it first and hurriedly lit some dry litter from the hide's stone floor with embers from Oh-Mas' pipe, which he set to gloaing with a few puffs of air beforehand.
+This roused the men, both of whom scrambled together in Grav's kit to get his lamp. Gog found it first and Grav hurriedly lit some dry litter from the hide's stone floor with embers from Oh-Mas' pipe, which he set to glowing with a few puffs of breath beforehand.
 
-With a heavier dried leaf from this he finally lit his lamp. Looking up he realized that light availability was not a problem for the time being. The cat's front half was fully alight. It had a sort of mane of standing hackles between its shoulder blades of made of fire. The liquid ran down his back and ribcage and also down the outside of its front legs, and the flame followed.
+With a heavier dried leaf from this he finally lit his lamp. Looking up he realized that light availability was not a problem for the time being. The cat's front half was fully alight. It had a sort of mane of standing hackles between its shoulder blades of made of fire. The liquid ran down his back, over his flanks and also down the outside of its front legs. And the flame followed.
 
 The cat spent a few drop-stone seemingly calmed by the fire. It was pacing in a circle as if thinking of lying down.
 
