--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -164,7 +164,7 @@ Grav and Gog could now clearly see the mad beast at the end of the tunnel, the a
 
 Whatever the danger, the two men were captivated.
 
-The cats fangs looked like polished tin, and seemed to be devoid of defect. The gums anchoring the fangs were not pink but blood red, almost purple. Gog could /feel/ how tightly those fangs were held by those gums, which seemed to be made of flexing muscle, actively holding, wielding those fangs. The symmetrical tongue, tucked far back in the throat had spikes on its surface that went from semitransparent crystal where they were rooted in the tongue to shiny black at the sharp tips, like tarantula fangs. Its "wiskers" were about a xx diameter at the root.
+The cats fangs looked like polished tin, and seemed to be devoid of defect. The gums anchoring the fangs were not pink but blood red, almost purple. Gog could /feel/ how tightly those fangs were held by those gums, which seemed to be made of flexing muscle, actively holding, wielding those fangs. The face-sized symmetrical tongue, tucked far back in the throat had spikes on its surface that went from semitransparent crystal where they were rooted in the tongue to shiny black at the sharp tips, like tarantula fangs. Its "wiskers" were about a xx diameter at the root.
 
 As if in place of saliva, the tiger dripped think, undiluted blood from its mouth, it had no apparent wound in its mouth, but its throat could have easily been pierced so furious and sure were Oh-Mas' jabs.
 
