--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -170,7 +170,7 @@ As if in place of saliva, the tiger dripped think, undiluted blood from its mout
 
 To Grav and Gog, the cat simply drooled blood.
 
-In adition to the tick laminer blood, there was bright pink foam coming from the sides of its mouth in pluses, a bit more pushed out with each breath. It fell to the floor in small pink piles.
+In addition to the thick laminar blood, there was bright pink foam coming from the sides of its mouth in pluses, a bit more pushed out with each breath. It fell to the floor in small pink piles.
 
 More purple-pink gum would be exposed with every high screech-like roar.
 
