--- a/001.org
+++ b/001.org
@@ -7,6 +7,8 @@ You will have seen the movie. They do wear minimal animal hide clothing. Wouldn'
 
 They do in fact live in caves! Most of your Hollywood stereotypes are based on what regular, modern humans would invent or do to solve some particular problem, say for a screenplay, given only nature's resources; and that is what the Crec do also, unsurprisingly. It's no wonder that regular, modern people[fn:: For you and the Crec both /are/ modern humans.] converge on many of the same solutions.
 
+test
+
 That's why, say for example, unavoidably having to club a loved one over the head is in fact required on rare occasions. And have you ever tried to get out of the way of an enraged mother baboon? Sometimes you just grab a handful of hair and run for your life. Yes, there is clubbing. And dragging by the hair.
 
 Clever analogs to modern vehicles? No, sadly. Those are in the future and they are not great. But warm, furry, if mangey backs abound (They do ride animals, which they domesticate, to a degree.)
