--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -195,7 +195,41 @@ xxx sure seems like if cats like that walking around, no one would go outside.
 
 So long as it stayed where it was, all was safe.
 
-Things began to feel unsafe for the men when they looked at its eyes, 
+Things began to feel unsafe for the men when they looked at its eyes. To say nothing of the color or patterns in the cats fist-sized eyes, there was clearly /movement/. The cat seemed to have swirls of blue-green, glossy black, silver, and colors that they could recall but did not have words for. These patterns moved together in an inward whirlpool draining into its black puples.
+
+On exceptionally high mountains, on exceptionally cold, crisp winter nights, if you were a caveman blessed with great eyesight and you sat quietly, but fully aware for a palm or so, you could see things in the night sky for which no xxx had anything but guesses. Most of what you could not see from the mouth of your cave were whispy and ephemeral looking, like carefully pulled and stompped <-xxx satin-cotton; thicker in some places, thinner in others, but with noticable patterns and hints at "structure".
+
+One of these high-night-ghosts was a swirl shape, though one seen at an angle[fn:: Andromeda. They called it 'Ender's-Sink'.], a more relatable example to most Crec would be the appearance of a whirlpool going down a sink, especially when different kinds of flowering duckweed and floating debris gives it some character and shows its "arms".
+
+The tooth-cat had eyes made of impossible colors that swirled down the drain of its eye. It's soul <-xxx, perhaps.
+
+The cat took on an otherworldly characther, it was as much speaking to them as it was trying to kill and eat them. The words had no anger. They just "were".
+
+#+begin_quote
+Do I not suffer too? Behold my fury and my might. I only must eat, like you, I am mortal. To kill you without mercy is as wrong to me as it is for you to do such to a marmette <-xxx Now, having violated The Order, I must make you suffer. And I will.
+#+end_quote
+
+"He's talking.", said Grav.
+
+"No he's not." Is all Gog said as he continued to stare.
+
+Both staring and both feeling the reality of what just happened, they watched the enormous animal do a graceful turn-about <-xxx that seemed to happen in slow motion, with the beast looking over it's muscular shoulder as he turned.
+
+#+begin_quote
+This isn't over.
+#+end_quote
+
+The cat accelerated directly away from the hide, where his flickering light could be seen peeking through the trees as he climbed the plane, seamingly for the stars.
+
+The next morning had an unfortunate, "all too real" feeling of any night of "overdoing it", as if reality did in fact have an anchor and this is what finding a new anchorage <-xxx felt like this. It was just another chore.
+
+The unmistakable scent of barbecued game wafted in the air outside. It had the /smell/ of an epic last-night.
+
+Gog had crusty goo surrounding his eyes and what was clearly vomit on his chin stubble. His eyes, while not psychedelic, were quite a sight.
+
+"What", is all Gog said as his eyes darted around.
+
+"You've got 'gog' in your eye, scout."
 
 
 xxx
