--- a/Spoilers.org
+++ b/Spoilers.org
@@ -1,3 +1,7 @@
+#+title: Spoilers
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="index.css" />
+#+OPTIONS: num:nil
+
 Hebbo!
 
 Here be spoilers.
