--- a/004.org
+++ b/004.org
@@ -4,7 +4,7 @@
 
 Grav and Gog were faced with spending the night, baring a miracle, in the most dangerous place possible, only because a much greater danger had recently moved into the area, like bad weather, but worse.
 
-This was part of the life-long education the men had about lizard-birds.  The woods were safer but not safe. They were also the only reasonable choice.
+This was part of the life-long education the men had about lizard-birds.  The woods were safer but not safe. They were also the only reasonable choice if a lizard-bird is in the area.
 
 This was definitely toward the end of the curriculum, but they both knew the approximate odds of either choice, and chose the least bad: They would be spending the night on the edge of Small Woods somehow or other.
 
