--- a/004.org
+++ b/004.org
@@ -20,7 +20,7 @@ The forest-child made a mock jog in the direction he had been heading and then a
 
 Grav and Gog looked at each other. Not having a preference for /where/ along the margin of the dangerous woods they would sleep, at least generally, they gave in and mimed that they would go with him. "After you, sir", was their chosen gesture of response.
 
-They followed the stinking baby at a right angle to the trail. As mentioned, forest-children tend to travel as though everywhere was a path. They could travel the path of a bird, but projected onto the ground. For them, the shortest path between two points was shorter than it is for most.
+They followed the stinking baby at a right angle to the trail. As mentioned, forest-children tend to travel as though "everywhere" was an established trail. They could travel the path of a bird, but projected onto the ground. For them, the shortest path between two points was shorter than it is for most.
 
 In the growth strata of most jungle or woods, there was a fairly consistently unoccupied bit of vertical real estate.
 
