--- a/004.org
+++ b/004.org
@@ -24,7 +24,7 @@ They followed the stinking baby at a right angle to the trail. As mentioned, for
 
 In the growth strata of most jungle or woods, there was a fairly consistently unoccupied bit of vertical real estate.
 
-There were juicy, mostly edible ferns and broad-leafed weeds up to about a pinkie-thumb from the floor. The next-tallest "layer" was probably about nipple-hight for an adult Crec.
+There were juicy, mostly edible or at least useful ferns and broad-leafed weeds up to about a pinkie-thumb from the floor. The next-tallest "layer" was probably about nipple-hight for an adult Crec.
 
 But a /baby/ could trek along unbothered by anything other than what for /him/ would be light knee-high, dewy, soft green leaves, with the next layer of green being, again for him, one or two heads above, which is a good thing as this is also a strata where spines and poisons were in wider use, to shoo away anything that might disturb their peaceful plant-life.
 
