--- a/004.org
+++ b/004.org
@@ -34,7 +34,7 @@ A Crec ecology text book could easily have used a picture of this bit of woods t
 
 The men, their spears now being employed as brush clearing blades, at which they were barely more useful than any other stick, were swatting away face-sized, muscular, quick spiders, all-but-invisible small, but poisonous green vipers, and the occasional poisonous frog or centipede (and the pretenders of each, who they could immediately identify as harmless, even at this pace, and would try not to wantonly kill.)
 
-Bringing a spearhead down flat and sharply on top of some of the bigger spiders would make an audible "pop" with spray spider guts. The two men would sometimes try to get the other with a good spray of spider guts with an expertly angled swat of the spearhead[fn:: In the modern game of golf, this is known as a 'chip'.]. It was a kind of game they had.
+Bringing a spearhead down flat and sharply on top of some of the bigger spiders would make an audible "pop", with a spray spider guts. The two men would sometimes try to get the other with a good spray of spider guts with an expertly angled swat of the spearhead[fn:: In the modern game of golf, this is known as a 'chip'.]. It was a kind of game they had.
 
 It occurred to them both that if they were the size of a baby, they too would do as forest-children do. They could both see that the baby was having no trouble at all. He was currently dragging his long spear behind him, his hand around its tip, his thumb checking the point for sharpness at intervals[fn:: This is a nervous habit that is frowned upon by the Crec. They call it 'worrying your point' and it's used metaphorically to mean 'getting worked up over nothing'. This /will/ dull a fire-hardened spear point on the scale of days.].
 
